table.js: provide a columns option to the cells content align, by default: numbers at right, strings at left

--- a/test/table.html
+++ b/test/table.html
@@ -65,7 +65,7 @@
         { id: 9, title: "The Hunger Games" , author: "Suzanne Collins", year: 2008 }
       ] );
       
-      columns.add( [ { id: "year" , label: "Year"  } ] );
+      columns.add( [ { id: "year" , label: "Year", align: "center" } ] );
       /*
       books.add( [
         { id:  1, title: "A Tale of Two Cities"                    , author: "Charles Dickens"        , year: 1859 },
