Extract class XS.Code into code.js from xs.js

--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
     </script>
     
     <script src="../src/xs.js"></script>
+    <script src="../src/code.js"></script>
     <script src="xs_tests.js"></script>
     
     <script>
