--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
     
     <script src="../src/xs.js"></script>
     <script src="../src/code.js"></script>
+    <script src="../src/connection.js"></script>
     <script src="xs_tests.js"></script>
     
     <script>
