Extract filter.js from connection.js

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
     <script src="../src/xs.js"></script>
     <script src="../src/code.js"></script>
     <script src="../src/connection.js"></script>
+    <script src="../src/filter.js"></script>
     <script src="xs_tests.js"></script>
     
     <script>
