Extract ordered_set.js from connection.js

--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@
     <script src="../src/code.js"></script>
     <script src="../src/connection.js"></script>
     <script src="../src/filter.js"></script>
+    <script src="../src/ordered_set.js"></script>
     <script src="../src/aggregator.js"></script>
     <script src="xs_tests.js"></script>
     
