Rename connection.js fork.js

--- a/test/table.html
+++ b/test/table.html
@@ -23,7 +23,7 @@
     
     <script type="text/javascript" charset="utf-8" src="../src/xs.js"></script>
     <script type="text/javascript" charset="utf-8" src="../src/code.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../src/connection.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../src/fork.js"></script>
     <script type="text/javascript" charset="utf-8" src="../src/filter.js"></script>
     <script type="text/javascript" charset="utf-8" src="../src/ordered_set.js"></script>
     <script type="text/javascript" charset="utf-8" src="../src/aggregator.js"></script>
