--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
     
     <script src="../src/xs.js"></script>
     <script src="../src/code.js"></script>
-    <script src="../src/connection.js"></script>
+    <script src="../src/fork.js"></script>
     <script src="../src/filter.js"></script>
     <script src="../src/ordered_set.js"></script>
     <script src="../src/aggregator.js"></script>
