Change all references to src directory to lib, npm compliance

--- a/test/index.html
+++ b/test/index.html
@@ -17,12 +17,12 @@
       chai.should();
     </script>
     
-    <script src="../src/xs.js"></script>
-    <script src="../src/code.js"></script>
-    <script src="../src/fork.js"></script>
-    <script src="../src/filter.js"></script>
-    <script src="../src/ordered_set.js"></script>
-    <script src="../src/aggregator.js"></script>
+    <script src="../lib/xs.js"></script>
+    <script src="../lib/code.js"></script>
+    <script src="../lib/fork.js"></script>
+    <script src="../lib/filter.js"></script>
+    <script src="../lib/ordered_set.js"></script>
+    <script src="../lib/aggregator.js"></script>
     <script src="xs_tests.js"></script>
     
     <script>
