fork.js:   - New Pipelet class has only one source and one destionation:     - when one adds more than one destionation, a Tee instance is create to receive all destinations     - new low-level methods for proper encapsulation, allowing derived classes to accept connections       or provide alternative implementation:       - _set_source()       - _add_destination()       - _remove_destination()     - Fork is now a deprecated alias of Pipelet
  - New Tee class is a Pipelet with many destinations:
    - is instanciated automatically by Pipelet when more than one destination is requested on a Pipelet
    - overloads add(), remove(), update(), clear(), _add_destination() and _remove_destination()
    - tee() pipelet allows architects to create explicit tee
    - will eventually become Fork, but this cannot be done before the current Fork is retired

  - Set.remove(): remove uneccesary and statistically questionable optimization

  - Set.make_index_of(): remove extra var.

--- a/test/table.html
+++ b/test/table.html
@@ -48,9 +48,10 @@
     <script src="xs_table_tests.js"></script>
     
     <script type="text/javascript" charset="utf-8">
-      var organizer = [ { id: "id" } ]
-        , set       = new XS.Ordered_Set( [ { id: false, label: "Chart" }, { id: true, label: "Chart", column: "sales" } ], organizer )
-        , checkbox  = set.checkbox( document.getElementById( "checkbox_control" ), 
+      var xs = XS.xs
+        , organizer = [ { id: "id" } ]
+        , set       = xs.order( [ { id: false, label: "Chart" }, { id: true, label: "Chart", column: "sales" } ], organizer )
+        , checkbox  = set.checkbox( document.getElementById( "checkbox_control" ),
             [ { id: "id" } ],
             {
               // default_value: { id: true, label: "Label True" }
