mv lib/fork.js lib/pipelet.js

--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
     
     <script src="../lib/xs.js"></script>
     <script src="../lib/code.js"></script>
-    <script src="../lib/fork.js"></script>
+    <script src="../lib/pipelet.js"></script>
     <script src="../lib/filter.js"></script>
     <script src="../lib/ordered_set.js"></script>
     <script src="../lib/aggregator.js"></script>
