--- a/test/table_controls.html
+++ b/test/table_controls.html
@@ -11,7 +11,7 @@
     
     <script type="text/javascript" charset="utf-8" src="../lib/xs.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/code.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../lib/fork.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../lib/pipelet.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/filter.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/ordered_set.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/aggregator.js"></script>
