add tests for new control Radio

--- a/test/control.html
+++ b/test/control.html
@@ -39,6 +39,8 @@
       <div id="checkbox_control"></div>
       <h4>Checkbox Group</h4>
       <div id="checkbox_group_control"></div>
+      <h4>Radio</h4>
+      <div id="radio_control"></div>
     </div>
     <div id="checkbox_value"></div>
     
