--- a/test/control.html
+++ b/test/control.html
@@ -41,6 +41,8 @@
       <div id="checkbox_group_control"></div>
       <h4>Radio</h4>
       <div id="radio_control"></div>
+      <h4>Drop Down</h4>
+      <div id="drop_down_control"></div>
     </div>
     <div id="checkbox_value"></div>
     
