Rename aggregator.js into aggregate.js

--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
     <script src="../lib/pipelet.js"></script>
     <script src="../lib/filter.js"></script>
     <script src="../lib/ordered_set.js"></script>
-    <script src="../lib/aggregator.js"></script>
+    <script src="../lib/aggregate.js"></script>
     <script src="xs_tests.js"></script>
     
     <script>
