--- a/test/table_controls.html
+++ b/test/table_controls.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" charset="utf-8" src="../lib/pipelet.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/filter.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/ordered_set.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../lib/aggregator.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../lib/aggregate.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/table.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/control.js"></script>
     
