Rename ordered_set.js into order.js

--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
     <script src="../lib/code.js"></script>
     <script src="../lib/pipelet.js"></script>
     <script src="../lib/filter.js"></script>
-    <script src="../lib/ordered_set.js"></script>
+    <script src="../lib/order.js"></script>
     <script src="../lib/aggregate.js"></script>
     <script src="xs_tests.js"></script>
     
