--- a/test/table.html
+++ b/test/table.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" charset="utf-8" src="../lib/code.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/pipelet.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/filter.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../lib/ordered_set.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../lib/order.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/aggregate.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/table.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/control.js"></script>
