table_controls.html: remove default selected value to test radio control change from nothing selected to something selected

--- a/test/table_controls.html
+++ b/test/table_controls.html
@@ -73,7 +73,7 @@
         , columns = columns_set.checkbox_group( document.getElementById( "checkbox_group" ), organizer )
         */
         , radio = xs.set( [
-              { id: 1, label: "Islam"       , selected: true },
+              { id: 1, label: "Islam"        },
               { id: 2, label: "Christianity" },
               { id: 3, label: "Judaism"      },
               { id: 4, label: "Buddhism"     },
