test/table_controls.htm: ordered_checkbox_group(): add options, which are mandatory even if unused

--- a/test/table_controls.html
+++ b/test/table_controls.html
@@ -110,7 +110,7 @@
       ;
       
       // The following unobvious composition of two orders with a checkbox_group could be part of control.js
-      XS.Compose( 'ordered_checkbox_group', function( source, order, element ) {
+      XS.Compose( 'ordered_checkbox_group', function( source, order, element, options ) {
         return source.order( order ).checkbox_group( element ).order( order );
       } );
       
