--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,8 @@
     <script src="../lib/filter.js"></script>
     <script src="../lib/order.js"></script>
     <script src="../lib/aggregate.js"></script>
+    <script src="../lib/join.js"></script>
+    
     <script src="xs_tests.js"></script>
     
     <script>
