--- a/test/table.html
+++ b/test/table.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" charset="utf-8" src="../lib/filter.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/order.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/aggregate.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../lib/selector.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/table.js"></script>
     <script type="text/javascript" charset="utf-8" src="../lib/control.js"></script>
     
