add uuid.js to the form tests

--- a/test/form.html
+++ b/test/form.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <script src="javascript/es5.js"></script>
+    <script src="javascript/uuid.js"></script>
 
     <title>XS Form</title>
     
