update package.json, install expect.js@0.2.0; update tests, use expect.js instead of chai

--- a/test/control.html
+++ b/test/control.html
@@ -9,11 +9,11 @@
     <script src="javascript/es5.js"></script>
 
     <script src="javascript/mocha.js"></script>
-    <script src="javascript/chai.js"></script>
+    <script src="javascript/expect.js"></script>
     <script>
       mocha.setup( 'bdd' );
 
-      chai.should();
+      // chai.should();
     </script>
     
     <title>XS Control</title>
