--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
     <title>XS Tests</title>
     
     <script src="javascript/es5.js"></script>
+    <script src="javascript/json2.js"></script>
     
     <script src="javascript/mocha.js"></script>
     <script src="javascript/expect.js"></script>
