Socket_IO_Socket: implement remote pipelet crossover: fetch(), add(), remove(), update(), clear(), listen to events "xs_fetch", "xs_fetched_values", "xs_add", "xs_remove", "xs_update", "xs_clear"

--- a/test/socketio.html
+++ b/test/socketio.html
@@ -55,7 +55,7 @@
             connection.state = 'connected';
             
             // send some operation
-            socket.emit( 'xs', { operation: 'add', values: [ { id: 1 } ] } )
+            socket.emit( 'xs_add', { values: [ { id: 1 } ] } )
           } )
         
           .on( 'xs', function ( data ) {
