--- a/test/socketio.html
+++ b/test/socketio.html
@@ -55,11 +55,7 @@
             connection.state = 'connected';
             
             // send some operation
-            socket.emit( 'xs_add', { values: [ { id: 1 } ] } )
-          } )
-        
-          .on( 'xs', function ( data ) {
-            de&&ug( 'received data: ' + log.s( data ) );
+            new XS.Socket_IO_Socket( socket ).add( [ { id: 1 }, { id: 2 } ] );
           } )
         ;
       };
