socketio test: add trace and set to force fetch operation through

--- a/test/socketio.html
+++ b/test/socketio.html
@@ -19,12 +19,15 @@
     <script>
       var xs = XS.xs;
       
-      xs.socket_io_client()
+      // Loopback all server data back to server for testing purposes
+      xs.socket_io_client() // .socket_io_client()
         .add( [
           { id: 1 },
           { id: 2 },
           { id: 3 }
         ] )
+        .trace( 'from socket io server' )
+        .set()
       ;
     </script>
   </body>
