ui.html: add divs for checkbox, checkbog group, radio and drop down controls

--- a/test/ui.html
+++ b/test/ui.html
@@ -30,7 +30,12 @@
   
   <body>
     <div id="table"></div>
-    <div id="controls"></div>
+    <div id="controls">
+      <div id="chart"></div>
+      <div id="hobbies"></div>
+      <div id="religions"></div>
+      <div id="countries"></div>
+    </div>
     <div id="form"></div>
     
     <div id="mocha"></div>
