--- a/test/carousel.html
+++ b/test/carousel.html
@@ -61,17 +61,17 @@
     <script>
       var xs = XS.xs
         , source_1   = xs.set( [
-            { title: 'Villa Marrakech 1' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/01.jpg' },
-            { title: 'Villa Marrakech 2' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/02.jpg' },
-            { title: 'Villa Marrakech 3' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/03.jpg' },
-            { title: 'Villa Marrakech 4' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/04.jpg' }
+            { title: 'Villa Marrakech 1' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/01.jpg' },
+            { title: 'Villa Marrakech 2' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/02.jpg' },
+            { title: 'Villa Marrakech 3' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/03.jpg' },
+            { title: 'Villa Marrakech 4' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/04.jpg' }
           ], { auto_increment: true, name: 'Images dataset 1' } )
         
         , source_2 = xs.set( [
-            { title: 'Villa Marrakech 5' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/05.jpg' },
-            { title: 'Villa Marrakech 7' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/07.jpg' },
-            { title: 'Villa Marrakech 8' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/08.jpg' },
-            { title: 'Villa Marrakech 9' , name: 'https://raw.github.com/ConnectedSets/castorcad/master/images/09.jpg' }
+            { title: 'Villa Marrakech 5' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/05.jpg' },
+            { title: 'Villa Marrakech 7' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/07.jpg' },
+            { title: 'Villa Marrakech 8' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/08.jpg' },
+            { title: 'Villa Marrakech 9' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/09.jpg' }
           ], { auto_increment: true, name: 'Images dataset 2' } )
         
         , carousel_without_preloading = source_1
