set(): extract auto_increment() as a pipelet. Add [ id ] as default key in set_default_options. Document set_flow().

--- a/test/carousel.html
+++ b/test/carousel.html
@@ -61,18 +61,22 @@
     <script>
       var xs = XS.xs
         , source_1   = xs.set( [
-            { title: 'Villa Marrakech 1' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/01.jpg' },
-            { title: 'Villa Marrakech 2' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/02.jpg' },
-            { title: 'Villa Marrakech 3' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/03.jpg' },
-            { title: 'Villa Marrakech 4' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/04.jpg' }
-          ], { auto_increment: true, name: 'Images dataset 1' } )
+              { title: 'Villa Marrakech 1' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/01.jpg' },
+              { title: 'Villa Marrakech 2' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/02.jpg' },
+              { title: 'Villa Marrakech 3' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/03.jpg' },
+              { title: 'Villa Marrakech 4' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/04.jpg' }
+            ], { name: 'Images dataset 1' }
+          )
+          .auto_increment()
         
         , source_2 = xs.set( [
-            { title: 'Villa Marrakech 5' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/05.jpg' },
-            { title: 'Villa Marrakech 7' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/07.jpg' },
-            { title: 'Villa Marrakech 8' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/08.jpg' },
-            { title: 'Villa Marrakech 9' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/09.jpg' }
-          ], { auto_increment: true, name: 'Images dataset 2' } )
+              { title: 'Villa Marrakech 5' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/05.jpg' },
+              { title: 'Villa Marrakech 7' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/07.jpg' },
+              { title: 'Villa Marrakech 8' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/08.jpg' },
+              { title: 'Villa Marrakech 9' , uri: 'https://raw.github.com/ConnectedSets/castorcad/master/images/09.jpg' }
+            ], { name: 'Images dataset 2' }
+          )
+          .auto_increment()
         
         , carousel_without_preloading = source_1
             .bootstrap_carousel( document.getElementById( 'carousel_1' ) )
