--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
     <script src="/node_modules/mocha/mocha.js"></script>
     <script src="/node_modules/expect.js/expect.js"></script>
     
+    <script src="xs_tests_utils.js"></script>
     <script src="xs_core.js"></script>
     
   </head>
