Require transaction_id support along with more in options; implement tranasction_id into XS.more() and XS.only_more()

--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,8 @@
     <script src="javascript/es5.js"></script>
     <script src="javascript/json2.js"></script>
     
+    <script src="test/javascript/uuid.jstest/javascript/uuid.js"></script>
+    
     <script src="../lib/xs.js"></script>
     <script src="../lib/code.js"></script>
     <script src="../lib/pipelet.js"></script>
