--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
     <script src="javascript/es5.js"></script>
     <script src="javascript/json2.js"></script>
     
-    <script src="test/javascript/uuid.jstest/javascript/uuid.js"></script>
+    <script src="javascript/uuid.js"></script>
     
     <script src="../lib/xs.js"></script>
     <script src="../lib/code.js"></script>
