load_images(): add options node_id, display, loading_max; refactoring; add more tests

--- a/test/load_images-min.html
+++ b/test/load_images-min.html
@@ -13,8 +13,8 @@
     <script src="javascript/mocha_expect-min.js"></script>
     
     <style>
-      #xs_preloaded_images img {
-        width: 30%;
+      #xs_load_images img {
+        width: 10%;
       }
     </style>
   </head>
