--- a/test/load_images.html
+++ b/test/load_images.html
@@ -21,8 +21,8 @@
     <script src="../node_modules/expect.js/expect.js"></script>
     
     <style>
-      #preloaded_images img {
-        width: 30%;
+      #xs_load_images img {
+        width: 10%;
       }
     </style>
   </head>
