--- a/test/form.html
+++ b/test/form.html
@@ -7,7 +7,7 @@
     
     <script src="/socket.io/socket.io.js"></script>
     
-    <script type="text/javascript" charset="utf-8" src="../lib/xs-min.js"></script>
+    <script src="../lib/xs-min.js"></script>
   </head>
   
   <body>
