--- a/test/index.html
+++ b/test/index.html
@@ -21,8 +21,8 @@
     <script src="../lib/join.js"></script>
     <script src="../lib/json.js"></script>
     
-    <script src="../node_modules/mocha/mocha.js"></script>
-    <script src="../node_modules/expect.js/expect.js"></script>
+    <script src="/node_modules/mocha/mocha.js"></script>
+    <script src="/node_modules/expect.js"></script>
     
     <script src="xs_tests_utils.js"></script>
     <script src="xs_core.js"></script>
