Control..Drop_Down(): code refactoring; add new tests

--- a/test/xs_controls.html
+++ b/test/xs_controls.html
@@ -13,6 +13,9 @@
     <h3>Control : CheckBox()</h3>
     <div id="checkbox"></div>
     
+    <h3>Control : Drop_Down()</h3>
+    <div id="drop_down"></div>
+    
     <script src="javascript/init_controls.js" type="text/javascript"></script>
   </body>
 </html>
