Control..Radio(): code refactoring; add new tests

--- a/test/xs_controls.html
+++ b/test/xs_controls.html
@@ -16,6 +16,9 @@
     <h3>Control : Drop_Down()</h3>
     <div id="drop_down"></div>
     
+    <h3>Control : Radio()</h3>
+    <div id="radio"></div>
+    
     <script src="javascript/init_controls.js" type="text/javascript"></script>
   </body>
 </html>
