--- a/test/xs_controls.html
+++ b/test/xs_controls.html
@@ -19,6 +19,9 @@
     <h3>Control : Radio()</h3>
     <div id="radio"></div>
     
+    <h3>Control : CheckBox_Group()</h3>
+    <div id="checkbox_group"></div>
+    
     <script src="javascript/init_controls.js" type="text/javascript"></script>
   </body>
 </html>
