--- a/test/xs_controls.html
+++ b/test/xs_controls.html
@@ -22,6 +22,6 @@
     <h3>Control : CheckBox_Group()</h3>
     <div id="checkbox_group"></div>
     
-    <script src="javascript/init_controls.js" type="text/javascript"></script>
+    <script src="javascript/init_tests.js" type="text/javascript"></script>
   </body>
 </html>
