- Extract Event_Emitter, all Transaction classes, and Options from lib/pipelet.js to lib/transactions.js - Extract tests for Event_Emitter, all Transaction classes, and Options from test/src/xs_core.coffee to transactions.coffee - Other minor changes

--- a/test/index-min.html
+++ b/test/index-min.html
@@ -12,12 +12,13 @@
     <script src="javascript/mocha_expect-min.js"></script>
     
     <script src="lib/xs_tests_utils.js"></script>
-    <script src="lib/clone_tests.js"></script>
-    <script src="lib/trace_domain.js"></script>
-    <script src="lib/query.js"></script>
-    <script src="lib/xs_core.js"></script>
-    <script src="lib/xs_json.js"></script>
-    <script src="lib/xs_transforms.js"></script>
+    <script src="lib/clone_tests.js"   ></script>
+    <script src="lib/trace_domain.js"  ></script>
+    <script src="lib/query.js"         ></script>
+    <script src="lib/transactions.js"  ></script>
+    <script src="lib/xs_core.js"       ></script>
+    <script src="lib/xs_json.js"       ></script>
+    <script src="lib/xs_transforms.js" ></script>
     
     <script>
       window.onload = function() {
