sales.json: - update date format so it can be sortable - add more test records (10 in total) - remove the flow attribute as it is defined in the code - add a sale's identifier (id)
client.js:
- remove xs.set for the columns variable initialisation
- remove the by_date declaration and initialisation as they are useless
- filter by year as documented

index.html:
- Modify the page title
- use a div tag called 'sales_table' instead of a table tag in the body section

server.js:
- cleanup indentation
- remove unused code
- set sales flow directly using the configuration pipelet (as shown in the documenation)

--- a/examples/teaser/index.html
+++ b/examples/teaser/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Connected Sets - Aggregate Sales by Year and Employee</title>
+    <title>Connected Sets - Sales ordered by date and displayed real time with any sales' database update</title>
 
     <script src="all-min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <table id="sales_table" name="sales_table"></table>
+    <div id="sales_table" name="sales_table"></div>
 
     <script>client();</script>
   </body>
