--- a/test/rs_controls.html
+++ b/test/rs_controls.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>XS UI : Controls</title>
+    <title>RS UI : Controls</title>
     
-    <script src="../lib/xs_core-min.js" type="text/javascript"></script>
-    <script src="../lib/xs_ui-min.js"   type="text/javascript"></script>
+    <script src="../lib/toubkal-min.js" type="text/javascript"></script>
+    <script src="../lib/rs_ui-min.js"   type="text/javascript"></script>
   </head>
   
   <body>
