Trace_Domain: - First use in lib/rs.js - updated test/http.js, test/index.html to add lib/trace_domain.js - Implement Trace_Domain.to_console() trace consumer - Implement Trace_Domain.to_console_parameters() to build console.log() parameters from emitted trace - Implement Trace_Domain.time_difference_string() to make a sting when a trace comes 1 millisecond or more after the previous - default trace consumer is now Trace_Domain.to_console() - eases trace removal by minifier - trace.valueOf() now returns the supremum of the highest trace level - internal trace level can be set to -1 indicating no trace allowed - trace.set_trace_level( level ) now uses trace.query_clear() and trace.query_add( [ { _level: level } ] ) - trace.query_default() now uses trace.set_trace_level( Trace_Domain.default_trace_level ) - more debugging traces for Trace_Domain, set to false by default - added 2 tests - improved documentation

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
     <script src="javascript/es5.js"           ></script>
     <script src="javascript/json2.js"         ></script>
     
+    <script src="../lib/trace_domain.js"      ></script>
     <script src="../lib/rs.js"                ></script>
     <script src="../lib/code.js"              ></script>
     <script src="../lib/query.js"             ></script>
