Adding trace_domain.js as required in README.md and test pages

--- a/test/table_controls.html
+++ b/test/table_controls.html
@@ -11,6 +11,7 @@
     
     <script src="../node_modules/node-uuid/uuid.js"></script>
     
+    <script src="../lib/trace_domain.js"></script>
     <script src="../lib/rs.js"></script>
     <script src="../lib/code.js"></script>
     <script src="../lib/pipelet.js"></script>
