--- a/test/carousel.html
+++ b/test/carousel.html
@@ -15,7 +15,7 @@
     <script src="javascript/jquery-1.10.2.min.js"></script>
     <script src="javascript/jquery.mobile-1.3.2.min.js"></script>
     
-    
+    <script src="../lib/trace_domain.js"></script>
     <script src="../lib/rs.js"></script>
     <script src="../lib/code.js"></script>
     <script src="../lib/pipelet.js"></script>
