Trace_Domain renamed Lazy_Logger, updated documentation: - lib/trace_domain.js renamed lib/lazy_logger.js - Class Trace_Domain is now Lazy_Logger - /test files updated

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
     <script src="javascript/es5.js"           ></script>
     <script src="javascript/json2.js"         ></script>
     
-    <script src="../lib/trace_domain.js"      ></script>
+    <script src="../lib/lazy_logger.js"      ></script>
     <script src="../lib/rs.js"                ></script>
     <script src="../lib/code.js"              ></script>
     <script src="../lib/query.js"             ></script>
@@ -29,7 +29,7 @@
     <script src="/node_modules/expect.js"     ></script>
     
     <script src="lib/tests_utils.js"          ></script>
-    <script src="lib/trace_domain.js"         ></script>
+    <script src="lib/lazy_logger.js"         ></script>
     <script src="lib/clone_tests.js"          ></script>
     <script src="lib/query.js"                ></script>
     <script src="lib/transactions.js"         ></script>
