--- a/test/index-min.html
+++ b/test/index-min.html
@@ -13,7 +13,7 @@
     
     <script src="lib/tests_utils.js" ></script>
     <script src="lib/clone_tests.js" ></script>
-    <script src="lib/trace_domain.js"></script>
+    <script src="lib/lazy_logger.js"></script>
     <script src="lib/query.js"       ></script>
     <script src="lib/transactions.js"></script>
     <script src="lib/core.js"        ></script>
