--- a/test/form.html
+++ b/test/form.html
@@ -7,7 +7,7 @@
     
     <script src="/socket.io/socket.io.js"></script>
     
-    <script src="../lib/rs-min.js"></script>
+    <script src="../lib/toubkal-min.js"></script>
   </head>
   
   <body>
