--- a/test/rs_url.html
+++ b/test/rs_url.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>RS UI : URL</title>
+    <title>Automated UI URL Tests</title>
     
     <script src="../lib/toubkal-min.js" type="text/javascript"></script>
   </head>
