--- a/test/automated/rs_ui.html
+++ b/test/automated/rs_ui.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>RS UI</title>
+    <title>UI Tests</title>
     
-    <script src="../lib/toubkal-min.js" type="text/javascript"></script>
+    <script src="/lib/toubkal-min.js" type="text/javascript"></script>
   </head>
   
   <body>
