--- a/test/manual/pipelet.html
+++ b/test/manual/pipelet.html
@@ -5,7 +5,7 @@
     
     <title>Pipelet Minified</title>
     
-    <script src="../lib/pipelet-min.js"></script>
+    <script src="/lib/pipelet-min.js"></script>
   </head>
   
   <body>
