--- a/test/automated/rs_controls.html
+++ b/test/automated/rs_controls.html
@@ -5,7 +5,7 @@
     
     <title>Automated UI Controls Tests</title>
     
-    <script src="../lib/toubkal-min.js" type="text/javascript"></script>
+    <script src="/lib/toubkal-min.js" type="text/javascript"></script>
   </head>
   
   <body>
@@ -22,6 +22,6 @@
     <h3>Control : CheckBox_Group()</h3>
     <div id="checkbox_group"></div>
     -->
-    <script src="javascript/init_tests.js" type="text/javascript"></script>
+    <script src="/test/javascript/init_tests.js" type="text/javascript"></script>
   </body>
 </html>
