--- a/test/automated/rs_url.html
+++ b/test/automated/rs_url.html
@@ -3,12 +3,12 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Automated UI URL Tests</title>
+    <title>Automated URL Tests</title>
     
-    <script src="../lib/toubkal-min.js" type="text/javascript"></script>
+    <script src="/lib/toubkal-min.js" type="text/javascript"></script>
   </head>
   
   <body>
-    <script src="javascript/init_tests.js" type="text/javascript"></script>
+    <script src="/test/javascript/init_tests.js" type="text/javascript"></script>
   </body>
 </html>
