teaser/index.html: update codepen

--- a/examples/teaser/index.html
+++ b/examples/teaser/index.html
@@ -46,8 +46,8 @@
       .
     </p>
     
-    <p data-height="400" data-theme-id="0" data-slug-hash="LVbPJB" data-default-tab="js" data-user="uiteoi" class='codepen'>
-      See the Pen <a href='http://codepen.io/uiteoi/pen/EjNxNd/'>LVbPJB</a> by Jean Vincent
+    <p data-height="400" data-theme-id="0" data-slug-hash="EjNxNd" data-default-tab="js" data-user="uiteoi" class='codepen'>
+      See the Pen <a href='http://codepen.io/uiteoi/pen/EjNxNd/'>EjNxNd</a> by Jean Vincent
       (<a href='http://codepen.io/uiteoi'>@uiteoi</a>) on <a href='http://codepen.io'>CodePen</a>.
     </p>
     <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
