Use undefine module loader: - use undefine version 0.2.3 - rename lib/core/rs.js into lib/core/RS.js - remove lib/util dependencies on lib/core/RS.js - create module utils/sublass extracted from RS.js - Some classes and methods become subclasses and submethods of their package main, e.g.   - Query_Tree becomes Query.Tree in package lib/core/query.js   - extend_2 becomes extend._2 in lib/util/extend.js   - Root becomes sublass.Root   - make_constructor_apply becomes subclass.make_constructor_apply   - Transaction becomes Transactions.Transaction   - Input_Transactions becomes Transactions.Input_Transactions   - Output_Transactions becomes Transactions.Output_Transactions   - Options becomes Transactions.Options - lib/html/html_serialize.js: set content attribute to null on caught exception - Updates many files and tests accordingly - Update documentation, work in progress, new pipelets, tests count

--- a/test/manual/bootstrap_photo_album.html
+++ b/test/manual/bootstrap_photo_album.html
@@ -37,7 +37,7 @@
       var carousel   = document.getElementById(  'carousel'  )
         , thumbnails = document.getElementById( 'thumbnails' )
         
-        , images = RS.rs
+        , images = rs
           .socket_io_server()
           .to_uri()
           .trace( 'bootstrap photo album, images received' )
