--- a/test/manual/carousel.html
+++ b/test/manual/carousel.html
@@ -51,8 +51,7 @@
     <script src="/test/bootstrap/js/bootstrap.js"></script>
     
     <script>
-      var rs = RS.rs
-        , source_1   = rs.set( [
+      var source_1   = rs.set( [
               { title: 'Villa Marrakech 1' , uri: 'https://raw.github.com/ReactiveSets/demo/master/images/01.jpg' },
               { title: 'Villa Marrakech 2' , uri: 'https://raw.github.com/ReactiveSets/demo/master/images/02.jpg' },
               { title: 'Villa Marrakech 3' , uri: 'https://raw.github.com/ReactiveSets/demo/master/images/03.jpg' },
