--- a/test/manual/webrtc.html
+++ b/test/manual/webrtc.html
@@ -27,7 +27,7 @@
     </table>
     
     <script>
-      var rs       = RS.rs
+      var RS       = rs.RS
         , extend   = RS.extend
         , extend_2 = RS.extend_2
         , Pipelet  = RS.Pipelet
