--- a/test/manual/socketio.html
+++ b/test/manual/socketio.html
@@ -18,7 +18,7 @@
     </div>
     
     <script>
-      RS.rs.set( [
+      rs.set( [
           { id: 1 },
           { id: 2 },
           { id: 3 }
