test/manual/index.html: update tests

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -13,11 +13,21 @@
     
     <script src="/test/lib/tests_utils.js"  ></script>
     <script src="/test/lib/clone_tests.js"  ></script>
+    <script src="/test/lib/value_equals.js"  ></script>
     <script src="/test/lib/lazy_logger.js"  ></script>
     <script src="/test/lib/query.js"        ></script>
     <script src="/test/lib/event_emitter.js"></script>
     <script src="/test/lib/transactions.js" ></script>
-    <script src="/test/lib/core.js"         ></script>
+    <script src="/test/lib/extend.js"       ></script>
+    <script src="/test/lib/subclass.js"     ></script>
+    <script src="/test/lib/code.js"         ></script>
+    <script src="/test/lib/RS.js"           ></script>
+    <script src="/test/lib/pipelet.js"      ></script>
+    <script src="/test/lib/set.js"          ></script>
+    <script src="/test/lib/filter.js"       ></script>
+    <script src="/test/lib/order.js"        ></script>
+    <script src="/test/lib/aggregate.js"    ></script>
+    <script src="/test/lib/join.js"         ></script>
     <script src="/test/lib/json.js"         ></script>
     <script src="/test/lib/transforms.js"   ></script>
     
