upgarde React to version 0.14.0

--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -15,8 +15,9 @@
   
   <link href="/css/base.css"  type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
   
-  <!-- React version 0.13.2 -->
-  <script src="https://fb.me/react-0.13.2.js" type="text/javascript"></script>
+  <!-- React version 0.14.0 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"     type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js" type="text/javascript"></script>
   
   <script src="/lib/toubkal-min.js"      type="text/javascript"></script> <!-- Toubkal version 0.2.7 -->
   <script src="/node_modules/toubkal/lib/react/react.js"></script>
