--- a/examples/index.html
+++ b/examples/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Oswald&subset=latin,latin-ext"/>
     <link href="css/base.css"  type="text/css" rel="stylesheet" /> <!-- base css style for all web pages -->
     
-    <!-- React version 0.13.2 -->
-    <script src="https://fb.me/react-0.13.2.js" type="text/javascript"></script>
+    <!-- React version 0.14.0 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.min.js"     type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.min.js" type="text/javascript"></script>
     
     <script src="/lib/toubkal-min.js"></script>
     <script src="/node_modules/toubkal/lib/react/react.js"></script>
