$to_dom(): refactoring with new API: - Rename to_dom() into $to_dom() - Implement using _add_value() and _remove_value() instead of _add() and _remove(), results in less code - Handle anti-state - Parameter "selector" can now be a pipelet - Parameter "selector" is now optional, in which case parent node is supposed to come with source values in $node attribute - Rename $dom_node emmitted attribute as $node - Source attribute "content" used to set innerHTML of created elements - Emit values even if found (add) or not found (remove) - new API not yet fully tested - tested for backward compatibility except pipelet name, with examples/index.html - Update documentation - Update examples/index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -24,7 +24,7 @@
       rs.socket_io_server()
         .flow( 'examples' )
         
-        .to_dom( '#examples', function render( document, $li, example ) {
+        .$to_dom( '#examples', function render( document, $li, example ) {
           var $a = document.createElement( 'a' );
           
           $a.href      = example.path;
